# vim-forge

./: CLAUDE.md  Cargo.toml  GAME_GUIDE.md  README.md  VISUAL_OVERHAUL.md  current_game_state.md
src/: app.rs  commands.rs  lib.rs  main.rs  resources.rs
src/circuit/: combinators.rs  mod.rs  network.rs
src/contracts/: board.rs  delivery.rs  generation.rs  mod.rs
src/economy/: expenses.rs  ledger.rs  loans.rs  mod.rs
src/ecs/: archetypes.rs  components.rs  mod.rs  recipes.rs  systems.rs
src/environment/: day_night.rs  mod.rs  weather.rs
src/fluid/: mod.rs  pipes.rs  pressure.rs  storage.rs
src/game/: connections.rs  inventory.rs  mod.rs  simulation.rs  undo.rs
src/input/: handler.rs
src/levels/: config.rs  freeplay.rs  level_01.rs  level_02.rs  level_03.rs  level_04.rs  level_05.rs  level_06.rs  level_07.rs  level_08.rs  level_09.rs  level_10.rs  level_11.rs  level_12.rs  level_13.rs  mod.rs
src/map/: grid.rs  mod.rs  multitile.rs  query.rs  save.rs  terrain.rs
src/market/: prices.rs
src/power/: batteries.rs  generators.rs  grid.rs  mod.rs
src/progression/: tracker.rs
src/render/: animations.rs  colors.rs  glyphs.rs  highlights.rs  mod.rs  particles.rs  splits.rs  trails.rs  viewport.rs
src/research/: labs.rs  mod.rs  science_packs.rs  tree.rs
src/scaling/: difficulty.rs  mod.rs  prestige.rs  regulations.rs  walls.rs
src/transport/: drones.rs  mod.rs  (+4 more)
tests/: contract_tests.rs  economy_tests.rs  fluid_tests.rs  multitile_tests.rs  power_tests.rs  recipe_tests.rs  scaling_tests.rs  simulation_tests.rs  vim_parser_tests.rs  waste_tests.rs
(+26 files in other folders)
