[package]
name = "vimforge"
version = "0.1.0"
edition = "2021"
description = "A vim-grammar factory builder for the terminal"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
hecs = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
